# commerce-theory

./: .gitignore  Cargo.toml  Makefile  README.md
src/: accounting.rs  b2b.rs  basic.rs  catalog.rs  competitor_pricing.rs  crm.rs  dropship_profit.rs  dropshipping.rs  event_language.rs  event_replay.rs  event_sourcing.rs  forecasting.rs  foundation.rs  fulfillment_finance.rs  implicit_invariants.rs  inventory.rs  inventory_algorithms.rs  keyed_totals.rs  lib.rs  logistics.rs  marketing.rs  marketplace.rs  merchandising.rs  opportunity_portfolio.rs  opportunity_ranking.rs  orders.rs  post_purchase.rs  pricing.rs  risk_privacy.rs  summary.rs  tax.rs  validation.rs  workflow.rs
tests/: coverage.rs
