[package]
name = "commerce-theory"
version = "0.1.2"
edition = "2024"
description = "Runtime Rust mirror of the CommerceTheory Lean package"
license = "MIT"
authors = ["Yehor Smoliakov <egorsmkv@gmail.com>"]

[lib]
name = "commerce_theory"
path = "src/lib.rs"

[features]
default = []
serde = ["dep:serde", "time/serde"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
time = "0.3"

[dev-dependencies]
serde_json = "1"
